--- a/AgentsApp/Views/MainPage.xaml
+++ b/AgentsApp/Views/MainPage.xaml
@@ -8,6 +8,10 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Page.DataContext>
+        <viewModels:MainPageViewModel/>
+    </Page.DataContext>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -18,7 +22,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <ListView x:Name="AgentsList" ItemsSource="{x:Bind vm.AgentsCollection}" SelectedItem="{x:Bind vm.SelectedAgent, Mode=TwoWay}" Margin="50">
+        <ListView ItemsSource="{Binding AgentsCollection}" SelectedItem="{Binding SelectedAgent, Mode=TwoWay}" Margin="50">
             <ListView.Resources>
                 <SolidColorBrush x:Key="ListViewItemBackgroundSelected" Color="#25fc82" />
                 <SolidColorBrush x:Key="ListViewItemBackgroundSelectedPointerOver" Color="#25fc82" />
@@ -39,7 +43,7 @@
                         <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" FontSize="16"/>
                         <TextBlock Text="{Binding ContactNumber}" HorizontalAlignment="Center" FontSize="16"/>
                         <TextBlock Text="{Binding Email}" HorizontalAlignment="Center" FontSize="16"/>
-                        <Image Source="{Binding Photo}"/>
+                        <Image Source="{Binding Photo.Result}"/>
                     </StackPanel>
                 </DataTemplate>
             </GridView.ItemTemplate>
@@ -48,11 +52,11 @@
         <TextBlock Text="Агенты" FontSize="24" HorizontalAlignment="Center"/>
         <TextBlock Text="Информация" Grid.Column="1" FontSize="24" HorizontalAlignment="Center"/>
 
-        <Button Command="{x:Bind Path=vm.GoToAddPage}" CommandParameter="{x:Null}" x:Name="AddAgentButton" Grid.Row="1" Content="Добавить агента" HorizontalAlignment="Center" />
+        <Button Command="{Binding GoToAddPage}" CommandParameter="{x:Null}" x:Name="AddAgentButton" Grid.Row="1" Content="Добавить агента" HorizontalAlignment="Center" />
 
-        <Button Command="{x:Bind Path=vm.GoToEditPage}" CommandParameter="{x:Bind vm.SelectedAgent}" x:Name="EditAgentButton" Grid.Row="1" Grid.Column="1" Content="Редактировать агента" HorizontalAlignment="Left"/>
+        <Button Command="{Binding GoToEditPage}" CommandParameter="{Binding SelectedAgent}" x:Name="EditAgentButton" Grid.Row="1" Grid.Column="1" Content="Редактировать агента" HorizontalAlignment="Left"/>
 
-        <Button Command="{x:Bind vm.DeleteAgent}" x:Name="DeleteAgentButton" Grid.Row="1" Grid.Column="1" Content="Удалить агента" HorizontalAlignment="Right"/>
+        <Button Command="{Binding DeleteAgent}" x:Name="DeleteAgentButton" Grid.Row="1" Grid.Column="1" Content="Удалить агента" HorizontalAlignment="Right"/>
 
     </Grid>
 </Page>
